--- a/src/Index.html
+++ b/src/Index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" media="screen and (min-width:1200px)" href="plugin/css/mislider-skin-cameo.css">
     <link rel="stylesheet" media="screen and (max-width:1200px)" type="text/css" href="styles/mobileIndex.css" />
     <link rel="stylesheet" media="screen and (min-width:1200px)" type="text/css" href="styles/Index.css" />
+
 </head>
 
 <body>
@@ -110,10 +111,190 @@
                             </div>
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="academicSearch">...</div>
-                    <div role="tabpanel" class="tab-pane" id="ebook">...</div>
-                    <div role="tabpanel" class="tab-pane" id="dataBase">...</div>
-                    <div role="tabpanel" class="tab-pane" id="scholars">...</div>
+                    <div role="tabpanel" class="tab-pane" id="academicSearch">
+                        <div class="search clearfix">
+                            <div class="select fl">
+                                <!--存放选择的值-->
+                                <span class="selectVal" onselectstart="return false">全面搜索</span>
+                                <!--放置icon-->
+                                <i class="xl-icon"></i>
+                                <!--选择项-->
+                                <div class="selectList">
+                                    <div class="listA-all">
+                                        <a href="javascript:;" class="listA">全面搜索</a>
+                                        <a href="javascript:;" class="listA">选择项2</a>
+                                        <a href="javascript:;" class="listA">选择项3</a>
+                                        <a href="javascript:;" class="listA">选择项4</a>
+                                        <a href="javascript:;" class="listA">选择项5</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> <img src="images/search.png" alt="" > 查询</span></div>
+                        </div>
+                        <div class="data_base">
+                            <p>常用数据库: <span></span></p>
+                        </div>
+                        <div class="wailian">
+                            <div class="clearfix">
+                                <p class="fl">中文：</p>
+                                <ul class="clearfix fl">
+                                    <li>知网</li>
+                                    <li>万方</li>
+                                    <li>北大法宝</li>
+                                    <li>读秀</li>
+                                    <li>人民日报</li>
+                                </ul>
+                            </div>
+                            <div class="clearfix">
+                                <p class="fl">外文：</p>
+                                <ul class="clearfix fl">
+                                    <li>SCI</li>
+                                    <li>Scopus</li>
+                                    <li>JSTOR</li>
+                                    <li>lexis</li>
+                                    <li>heinonline</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="ebook">
+                        <div class="search clearfix">
+                            <div class="select fl">
+                                <!--存放选择的值-->
+                                <span class="selectVal" onselectstart="return false">全面搜索</span>
+                                <!--放置icon-->
+                                <i class="xl-icon"></i>
+                                <!--选择项-->
+                                <div class="selectList">
+                                    <div class="listA-all">
+                                        <a href="javascript:;" class="listA">全面搜索</a>
+                                        <a href="javascript:;" class="listA">选择项2</a>
+                                        <a href="javascript:;" class="listA">选择项3</a>
+                                        <a href="javascript:;" class="listA">选择项4</a>
+                                        <a href="javascript:;" class="listA">选择项5</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> <img src="images/search.png" alt="" > 查询</span></div>
+                        </div>
+                        <div class="data_base">
+                            <p>常用数据库: <span></span></p>
+                        </div>
+                        <div class="wailian">
+                            <div class="clearfix">
+                                <p class="fl">中文：</p>
+                                <ul class="clearfix fl">
+                                    <li>知网</li>
+                                    <li>万方</li>
+                                    <li>北大法宝</li>
+                                    <li>读秀</li>
+                                    <li>人民日报</li>
+                                </ul>
+                            </div>
+                            <div class="clearfix">
+                                <p class="fl">外文：</p>
+                                <ul class="clearfix fl">
+                                    <li>SCI</li>
+                                    <li>Scopus</li>
+                                    <li>JSTOR</li>
+                                    <li>lexis</li>
+                                    <li>heinonline</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="dataBase">
+                        <div class="search clearfix">
+                            <div class="select fl">
+                                <!--存放选择的值-->
+                                <span class="selectVal" onselectstart="return false">全面搜索</span>
+                                <!--放置icon-->
+                                <i class="xl-icon"></i>
+                                <!--选择项-->
+                                <div class="selectList">
+                                    <div class="listA-all">
+                                        <a href="javascript:;" class="listA">全面搜索</a>
+                                        <a href="javascript:;" class="listA">选择项2</a>
+                                        <a href="javascript:;" class="listA">选择项3</a>
+                                        <a href="javascript:;" class="listA">选择项4</a>
+                                        <a href="javascript:;" class="listA">选择项5</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> <img src="images/search.png" alt="" > 查询</span></div>
+                        </div>
+                        <div class="data_base">
+                            <p>常用数据库: <span></span></p>
+                        </div>
+                        <div class="wailian">
+                            <div class="clearfix">
+                                <p class="fl">中文：</p>
+                                <ul class="clearfix fl">
+                                    <li>知网</li>
+                                    <li>万方</li>
+                                    <li>北大法宝</li>
+                                    <li>读秀</li>
+                                    <li>人民日报</li>
+                                </ul>
+                            </div>
+                            <div class="clearfix">
+                                <p class="fl">外文：</p>
+                                <ul class="clearfix fl">
+                                    <li>SCI</li>
+                                    <li>Scopus</li>
+                                    <li>JSTOR</li>
+                                    <li>lexis</li>
+                                    <li>heinonline</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="scholars">
+                        <div class="search clearfix">
+                            <div class="select fl">
+                                <!--存放选择的值-->
+                                <span class="selectVal" onselectstart="return false">全面搜索</span>
+                                <!--放置icon-->
+                                <i class="xl-icon"></i>
+                                <!--选择项-->
+                                <div class="selectList">
+                                    <div class="listA-all">
+                                        <a href="javascript:;" class="listA">全面搜索</a>
+                                        <a href="javascript:;" class="listA">选择项2</a>
+                                        <a href="javascript:;" class="listA">选择项3</a>
+                                        <a href="javascript:;" class="listA">选择项4</a>
+                                        <a href="javascript:;" class="listA">选择项5</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="search_box fl"><input type="text" placeholder="请输入关键词"><span> <img src="images/search.png" alt="" > 查询</span></div>
+                        </div>
+                        <div class="data_base">
+                            <p>常用数据库: <span></span></p>
+                        </div>
+                        <div class="wailian">
+                            <div class="clearfix">
+                                <p class="fl">中文：</p>
+                                <ul class="clearfix fl">
+                                    <li>知网</li>
+                                    <li>万方</li>
+                                    <li>北大法宝</li>
+                                    <li>读秀</li>
+                                    <li>人民日报</li>
+                                </ul>
+                            </div>
+                            <div class="clearfix">
+                                <p class="fl">外文：</p>
+                                <ul class="clearfix fl">
+                                    <li>SCI</li>
+                                    <li>Scopus</li>
+                                    <li>JSTOR</li>
+                                    <li>lexis</li>
+                                    <li>heinonline</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div role="tabpanel" class="tab-pane" id="siteSearch">...</div>
                 </div>
             </div>
@@ -293,33 +474,44 @@
                         <div role="tabpanel" class="tab-pane active" id="today">
                             <div>
                                 <div class="news_top clearfix">
-                                    <ul class="clearfix fl ">
-                                        <li>1</li>
-                                        <li>2</li>
-                                        <li>3</li>
-                                        <li>4</li>
-                                        <li>5</li>
-                                        <li>6</li>
-                                        <li>7</li>
-                                    </ul>
                                     <!-- 接入jQuery时间控件 -->
                                     <div class=" fr container">
                                         <form action="" class="form-horizontal" role="form">
                                             <fieldset>
-
                                                 <div class="input-group date form_date " data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
                                                     <input class="form-control" size="16" type="text" value="" readonly placeholder="选择日期">
                                                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                                                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                                                 </div>
                                                 <input type="hidden" id="dtp_input2" value="" /><br/>
-
                                             </fieldset>
                                         </form>
                                     </div>
                                 </div>
                                 <div class="news_foot">
-                                    <img src="images/today.png" alt="">
+                                    <!-- 09/24修改版 -->
+                                    <div id="carousel" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#carousel" data-slide-to="0" class="active">1</li>
+                                            <li data-target="#carousel" data-slide-to="1">2</li>
+                                            <li data-target="#carousel" data-slide-to="2">3</li>
+                                        </ol>
+
+                                        <!-- Wrapper for slides -->
+                                        <div class="carousel-inner" role="listbox">
+                                            <div class="item active">
+                                                <img src="images/today.png">
+                                            </div>
+                                            <div class="item">
+                                                <img src="images/today.png">
+                                            </div>
+                                            <div class="item">
+                                                <img src="images/today.png">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- 09/24修改结束标 -->
                                 </div>
                             </div>
                         </div>
@@ -615,15 +807,10 @@
                         <div class="htmleaf-container">
                             <figure>
                                 <div class="mis-stage">
-                                    <!-- The element to select and apply miSlider to - the class is optional -->
                                     <ol class="mis-slider">
-                                        <!-- The slider element - the class is optional -->
                                         <li class="mis-slide">
-                                            <!-- A slide element - the class is optional -->
                                             <a href="#" class="mis-container">
-                                                <!-- A slide container - this element is optional, if absent the plugin adds it automatically -->
                                                 <figure>
-                                                    <!-- Slide content - whatever you want -->
                                                     <img src="images/legend-1.jpg" alt="Pink Water Lillies">
                                                     <figcaption>
                                                         <h4>心理营养</h4>
@@ -713,8 +900,10 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="plugin/js/bootstrap-datetimepicker.min.js"></script>
     <script src="plugin/js/bootstrap-datetimepicker.zh-CN.js"></script>
+
     <script src="plugin/js/modernizr-custom.js"></script>
     <script src="plugin/js/mislider.js"></script>
+
     <script type="text/javascript" id='jsCode'>
         $(function() {
             $(document).ready(function() {
@@ -744,7 +933,13 @@
                 });
                 $(".footer").load("footer.html");
             });
-            $('.carousel').carousel()
+
+            //新增轮播图
+
+
+            $('.carousel').carousel({
+                interval: 3000
+            })
 
             //服务模块
             $('.serve > .row').on('click', 'div', function() {
@@ -768,6 +963,8 @@
                 if ($("#dtp_input2").val() != "")
                     console.log($("#dtp_input2").val())
             })
+
+
         })
     </script>
 </body>
