--- a/src/header.html
+++ b/src/header.html
@@ -9,8 +9,10 @@
     </div>
 </div>
 <div class="clearfix w  logo">
-    <img src="images/logo.png" class="pcLogo">
-    <img src="images/logo2.png" alt="" class="moveLogo">
+    <a href="index.html">
+        <img src="images/logo.png" class="pcLogo">
+        <img src="images/logo2.png" alt="" class="moveLogo">
+    </a>
     <button></button>
     <div class="login fr">登录</div>
     <ul class='pc'>
@@ -21,7 +23,7 @@
                 </div>
                 <div class="fl flex-box" id="brand-waterfall">
                     <div class="item">
-                        <h3><a href="#">新到资源</a> </h3>
+                        <h3><a href="www.baidu.com">新到资源</a> </h3>
                         <ul class="clearfix">
                         </ul>
                     </div>
