--- a/src/header.html
+++ b/src/header.html
@@ -1,10 +1,12 @@
 <div class="top_note">
     <div class="clearfix top_head w ">
         <ul class="clearfix fr ">
-            <li><a href="#">相关链接</a></li>
-            <li><a href="#">旧版入口</a></li>
-            <li><a href="#">工作网</a></li>
+            <li><a href="#">新生</a></li>
+            <li><a href="#">校友</a></li>
+            <li><a href="#">旧版主页</a></li>
             <li><a href="#">English</a></li>
+            <li><a href="#">工作网</a></li>
+            <li><a href="#">相关链接</a></li>
         </ul>
     </div>
 </div>
@@ -14,7 +16,7 @@
         <img src="images/logo2.png" alt="" class="moveLogo">
     </a>
     <button></button>
-    <div class="login fr"><a href="#">登录</a></div>
+    <div class="login fr"><a href="#">登 录</a></div>
     <ul class='pc'>
         <li>概况
             <div class="content-item clearfix">
