--- a/src/Index.html
+++ b/src/Index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" media="screen and (max-width:1200px)" href="plugin/css/mobileCommon.css">
     <link rel="stylesheet" media="screen and (min-width:1200px)" href="plugin/css/common.css">
     <link rel="stylesheet" href="plugin/fonts/iconfont.css">
-    <!-- <link rel="stylesheet" media="screen and (min-width:1200px)" href="plugin/css/mislider.css">
-    <link rel="stylesheet" media="screen and (min-width:1200px)" href="plugin/css/mislider-skin-cameo.css"> -->
     <link rel="stylesheet" media="screen and (max-width:1200px)" type="text/css" href="styles/mobileIndex.css" />
     <link rel="stylesheet" media="screen and (min-width:1200px)" type="text/css" href="styles/Index.css" />
     <link rel="stylesheet" href="plugin/slicks/slick.css">
@@ -383,7 +381,7 @@
                     <a href="#">
                         <img src="images/default/consult.png" alt="">
                         <img src="images/choose/consultC.png" alt="">
-                        <p>学科服务</p>
+                        <p>科技查新</p>
                     </a>
                 </div>
                 <div class="col-lg-2 col-xs-3	col-sm-3 col-md-3">
@@ -423,18 +421,22 @@
                                             <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
                                         </div>
                                         <div class="news-right fr">
-                                            <span>27</span>
                                             <div>2019/06</div>
+                                            <span>27</span>
+
                                         </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="clearfix">
                                         <div class="news-left fl">
+                                            <h4>关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知</h4>
                                             <p>武汉大学图书馆里关于组织参加“我和我的祖国”书法绘画摄影作品大赛活动的通知...</p>
                                         </div>
                                         <div class="news-right fr">
-                                            <div>2019/06/27</div>
+
+                                            <div>2019/06</div>
+                                            <span>/27<span>
                                         </div>
                                     </a>
                                 </li>
@@ -507,44 +509,44 @@
                                                 <div class="input-group date form_date " data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
                                                     <input class="form-control" size="16" type="text" value="" readonly placeholder="选择日期">
                                                     <!-- <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span> -->
-                                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                                                </div>
-                                                <input type="hidden" id="dtp_input2" value="" /><br/>
-                                            </fieldset>
-                                        </form>
-                                    </div>
-                                </div>
-                                <div class="news_foot">
-                                    <!-- 09/24修改版 -->
-                                    <div id="carousel" class="carousel slide" data-ride="carousel">
-                                        <!-- Indicators -->
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#carousel" data-slide-to="0" class="active">1</li>
-                                            <li data-target="#carousel" data-slide-to="1">2</li>
-                                            <li data-target="#carousel" data-slide-to="2">3</li>
-                                        </ol>
-
-                                        <!-- Wrapper for slides -->
-                                        <div class="carousel-inner" role="listbox">
-                                            <div class="item active">
-                                                <img src="images/today.png">
-                                            </div>
-                                            <div class="item">
-                                                <img src="images/today.png">
-                                            </div>
-                                            <div class="item">
-                                                <img src="images/today.png">
-                                            </div>
+                                            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                                         </div>
-                                    </div>
-                                    <!-- 09/24修改结束标 -->
+                                        <input type="hidden" id="dtp_input2" value="" /><br/>
+                                        </fieldset>
+                                        </form>
+                        </div>
+                    </div>
+                    <div class="news_foot">
+                        <!-- 09/24修改版 -->
+                        <div id="carousel" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel" data-slide-to="0" class="active">1</li>
+                                <li data-target="#carousel" data-slide-to="1">2</li>
+                                <li data-target="#carousel" data-slide-to="2">3</li>
+                            </ol>
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img src="images/today.png">
+                                </div>
+                                <div class="item">
+                                    <img src="images/today.png">
+                                </div>
+                                <div class="item">
+                                    <img src="images/today.png">
                                 </div>
                             </div>
                         </div>
+                        <!-- 09/24修改结束标 -->
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
+    </div>
     </div>
 
     <!-- 热门服务部分 -->
@@ -552,18 +554,18 @@
         <div class="hotserve  w" id='hot'>
             <p class="hot-title">热门服务</p>
             <div class="role">
-                <ul class="clearfix serve-main">
+                <ul class=" serve-main">
                     <li class="serve-item">
                         <p class="iconfont icon-xuesheng-copy">新生</p>
                         <div class="serve-wailian clearfix">
-                            <ul class="fl">
+                            <ul class="">
                                 <li><a href="#" title='馆长寄语'>馆长寄语</a></li>
                                 <li><a href="#" title='馆长寄语'>新生游戏</a></li>
                                 <li><a href="#" title='馆长寄语'>新生手册</a></li>
                                 <li><a href="#" title='馆长寄语'>借书还书</a></li>
                                 <li><a href="#" title='馆长寄语'>上网自习</a></li>
                             </ul>
-                            <ul class="fr">
+                            <ul class="">
                                 <li><a href="#">英语学习</a></li>
                                 <li><a href="#">多媒体资源</a></li>
                                 <li><a href="#">精彩活动</a></li>
@@ -681,9 +683,9 @@
                         <li class="extend-item">
                             <h4>学科分析报告</h4>
                             <ol>
-                                <li> <a href="#"> 武汉大学SCIE/SSCI/AHCI论文动态</a> </li>
-                                <li> <a href="#"> 武汉大学国际论文统计与分析</a> </li>
-                                <li> <a href="#"> ESI学科动态与学科发展态势分析服务</a> </li>
+                                <li> <a href="#" title='武汉大学国际'> 武汉大学SCIE/SSCI/AHCI论文动态</a> </li>
+                                <li> <a href="#" title='武汉大学国际'> 武汉大学国际论文统计与分析</a> </li>
+                                <li> <a href="#" title='武汉大学国际'> ESI学科动态与学科发展态势分析服务</a> </li>
                             </ol>
                         </li>
                     </ul>
@@ -778,7 +780,6 @@
         <div class="special-box">
             <ul class="clearfix">
                 <li>
-
                     <a href="#">
                         <div class="shade"></div>
                         <img src="images/books/book (1).png" alt="">
@@ -1058,7 +1059,7 @@
                     </div>
                     <div role="tabpanel" class="tab-pane" id="otherresource">...3</div>
                 </div>
-
+                <div class="readerMore"><a href="#">More  →</a></div>
             </div>
         </div>
     </div>
@@ -1070,8 +1071,8 @@
     <script src="plugin/js/bootstrap-datetimepicker.min.js"></script>
     <script src="plugin/js/bootstrap-datetimepicker.zh-CN.js"></script>
     <script src='plugin/slicks/slick.min.js'></script>
-    <script src="plugin/js/modernizr-custom.js"></script>
-    <script src="plugin/js/mislider.js"></script>
+    <!-- <script src="plugin/js/modernizr-custom.js"></script>
+    <script src="plugin/js/mislider.js"></script> -->
 
     <script type="text/javascript" id='jsCode'>
         $(function() {
@@ -1086,7 +1087,20 @@
                             removejscssfile("mobileHead.js", "js")
                             loadJs('js/head.js')
                             loadJs('js/index.js')
-
+                                //当切换屏幕时大小时重新初始化书本轮播组件（先销毁组件后初始化，否则报错）
+                            $('.slider-center').slick('unslick')
+                            $('.slider-center').slick({
+                                centerMode: true,
+                                arrows: true,
+                                infinite: true,
+                                centerPadding: '10px',
+                                slidesToShow: 5,
+                                autoplay: true,
+                                responsive: [{ //当屏幕缩小至1200时不再执行轮播图功能
+                                    breakpoint: 1200,
+                                    settings: 'unslick'
+                                }]
+                            })
                         } else {
                             removejscssfile("index.js", "js")
                             removejscssfile("head.js", "js")
@@ -1117,8 +1131,6 @@
                         settings: 'unslick'
                     }]
                 })
-
-
             })
 
             $(".slider-center").slick({
